third_party/blink/web_tests/external/wpt/idle-detection/idlharness.https.any-expected.txt
This is a testharness.js-based test.
FAIL Test IDL implementation of Idle Detection API promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
Harness: the test ran to completion.

